src/test/deca/context/valid/sansObjet/simpleComp.deca
{
  int y=23;
  float x=11.23;
  if (y>x){}
  else if (y==x) {}
}
