src/test/deca/context/invalid/provided/PrintBool.deca
{
  boolean x = true;
  int y = 6;
  boolean z = (y == 7);
  println ((x&&z));
}
